yshop-drink-boot3/script/k8s/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: yshop
  labels:
    name: yshop
    environment: production
